src/index.css
/* ... */
  /* stacking-tiles tile borders */
  rect[class^="aprender-tile-"], rect[class*="aprender-tile-"] {
    stroke: var(--high-contrast-font-color);
  }

  /* Generatorb orbs */
  symbol#aprender-glyph-da79a6f4def08 * path,
  symbol#aprender-glyph-7a79a6f5634bc * path {
    stroke: var(--svg-default-fill);
  }

  /* Homeworlds stash bar */
  g#stash text {
    fill: var(--svg-gridline-color);
  }

  g#stash rect {
    stroke: var(--svg-gridline-color);
  }

  symbol#aprender-glyph-aa22a95b2368e [data-playerfill=true] {
    fill: var(--svg-default-fill)
  }

  /* Volcano caps */
  symbol#aprender-glyph-389d5741cdfe1 [data-playerstroke=true] {
    stroke: var(--svg-volcano-caps);
  }

  /* Loose text labels in volcano game areas */
  svg#theBoardSVG > text {
    fill: var(--svg-label-color);
  }

  /* Wizard's Garden labels */
  text.aprender-marker-3935a634ac317,
  text.aprender-marker-7de714aa4960a,
  text.aprender-marker-4d768b7f82802,
  text.aprender-marker-4e0da245977af
  {
    fill: var(--svg-label-color);
  }

  /* Wizard's Garden black piece */
  symbol#aprender-glyph-a46a8bca86d66 [data-playerfill=true] {
    fill: var(--svg-volcano-caps);
  }

  /* Binar row/column totals */
  div._meta_binar g#gridlines text[class^="aprender-marker"] {
    fill: var(--svg-label-color);
  }

  /* Mattock: invert blocked cell color */
  /* div._meta_mattock polygon.aprender-marker-f47325856bcb8  {
    fill: var(--svg-default-fill);
  } */

  /* black shading, 20% opacity (Gess) */
  polygon.aprender-marker-0ba3d1e994d63 {
    fill: var(--svg-default-fill);
  }

  /* Tablero: Dice */
  symbol#aprender-glyph-4e52996b2e358 circle,
  symbol#aprender-glyph-2929ffe7da425 circle,
  symbol#aprender-glyph-8d5038aeab733 circle,
  symbol#aprender-glyph-15842807f2ed1 circle,
  symbol#aprender-glyph-1513a42c54b3b circle,
  symbol#aprender-glyph-ef7d98e9c022d circle,   /* ^dice markers */
  symbol#aprender-glyph-981c4ac534f6a circle,   /* dice rolled */
  symbol#aprender-glyph-2a6c4b13aa358 circle,
  symbol#aprender-glyph-9cfc4b62e6d82 circle,
  symbol#aprender-glyph-cfcc4bbcf734b circle,
  symbol#aprender-glyph-925c4c0ac69d6 circle,
  symbol#aprender-glyph-94ac4c4dbed82 circle
  {
    fill: var(--svg-default-fill);
  }
  symbol#aprender-glyph-4e52996b2e358 rect,
  symbol#aprender-glyph-2929ffe7da425 rect,
  symbol#aprender-glyph-8d5038aeab733 rect,
  symbol#aprender-glyph-15842807f2ed1 rect,
  symbol#aprender-glyph-1513a42c54b3b rect,
  symbol#aprender-glyph-ef7d98e9c022d rect,   /* ^dice markers */
  symbol#aprender-glyph-981c4ac534f6a rect,   /* dice rolled */
  symbol#aprender-glyph-2a6c4b13aa358 rect,
  symbol#aprender-glyph-9cfc4b62e6d82 rect,
  symbol#aprender-glyph-cfcc4bbcf734b rect,
  symbol#aprender-glyph-925c4c0ac69d6 rect,
  symbol#aprender-glyph-94ac4c4dbed82 rect
  {
    stroke: var(--svg-default-fill);
  }

  /* Alfred's Wyke button bar fill inversion in dark mode */
  :root[color-mode="dark"] svg#_btnBar symbol.aprender-button-a697952a21593 > rect {
    fill: #dddddd;
  }
  :root[color-mode="dark"] svg#_btnBar symbol.aprender-button-0ca07818d5ffc > rect {
    fill: #999999;
  }

  /* Polyomino area icon colours */
  symbol#_icon-flipy > path,
  symbol#_icon-flipx > path,
  symbol#_icon-cw > path,
  symbol#_icon-ccw > path
  {
    stroke: var(--secondary-font-color);
  }
  symbol#_icon-cancel > path {
    stroke: var(--secondary-font-color);
    fill: var(--secondary-font-color);
  }

  /* King's Valley towers need to be highlighted */
  div._meta_valley symbol#aprender-glyph-80f2ff48cd1c0 > path {
    fill: var(--svg-default-fill);
  }

